[package]
name = "aor2017"
version = "0.1.0"
edition = "2021"
authors = ["James Youngman <james@youngman.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
sscanf = "0.4"
itertools = "0.10"

[profile.release]
debug = 1

[lib]
name = "lib"
path = "src/lib/lib.rs"


[[bin]]
name = "day01"
